# cogmem

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: hooks.json
.claude/commands/: cross-repo.md  forget.md  mark-dangerous.md  mark-stable.md  memory-status.md  recall.md  remember.md  workspace-status.md
.claude/skills/consolidate-memory/: SKILL.md
.claude/skills/memory/: SKILL.md
.serena/: project.yml
cogmem/: __init__.py  __main__.py  cli.py
cogmem/engine/: bootstrap.py  consolidate.py  decay.py  encode.py  recall.py  status.py  transfer.py  update.py  visualize.py
cogmem/models/: __init__.py  common.py  emotion.py  entity.py  episode.py  gist.py  pattern.py  prospective.py  spatial.py
cogmem/storage/: filesystem.py  index.py
cogmem/tiers/: global_mem.py  repo.py  workspace.py
cogmem/utils/: cues.py  deps.py  emotion_detect.py  repo_detect.py  scoring.py  tokens.py
docs/: USER_GUIDE.md  build_plan.txt  cogmem_spec_v3.2_clean.txt
tests/: test_bootstrap.py  test_consolidate.py  test_decay.py  test_emotion_detect.py  test_encode.py  test_integration.py  test_models.py  test_recall.py  test_storage.py  test_update.py  test_utils.py  test_visualize.py
