[tool.poetry]
name = "cogmem"
version = "0.1.0"
description = "Cognitive Codebase Memory — A human memory system for Claude Code"
authors = ["Aditya Patane"]
packages = [{include = "cogmem"}]

[tool.poetry.scripts]
cogmem = "cogmem.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
pydantic = "^2.0"
python-frontmatter = "^1.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-tmp-files = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
